# newsched

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  _config.yml  cmake-format.py  index.html  index.md  intro.md  meson.build  meson_options.txt
bench/flowgraphs/: CMakeLists.txt  basic.cpp  domain_adapt.cpp
blocklib/: CMakeLists.txt  README.md  create_block.py  create_mod.py  meson.build
blocklib/analog/: enums.yml  meson.build
blocklib/analog/agc/: agc.yml  agc_cpu.cc  agc_cpu.h  agc_cpu.hh  meson.build
blocklib/analog/fm_deemph/: fm_deemph_cpu.cc  fm_deemph_cpu.h
blocklib/analog/lib/: agc.cpp  agc_blk.cpp  meson.build
blocklib/analog/noise_source/: noise_source.yml  noise_source_cpu.cc  noise_source_cpu.h
blocklib/analog/quadrature_demod/: quadrature_demod_cpu.cc  quadrature_demod_cpu.h
blocklib/analog/sig_source/: sig_source.yml  sig_source_cpu.cc  sig_source_cpu.h
blocklib/analog/test/: meson.build  qa_agc.py  qa_noise.py  qa_quadrature_demod.py  qa_sig_source.py
blocklib/audio/alsa_sink/: alsa_sink_cpu.cc  alsa_sink_cpu.h
blocklib/audio/examples/: alsa_tones.grc
blocklib/audio/lib/: alsa_internal.h  meson.build
blocklib/blocks/: CMakeLists.txt  meson.build
blocklib/blocks/_lib/: meson.build
blocklib/blocks/annotator/: annotator.cpp  annotator.hh  annotator.hpp  annotator.yml  annotator_cpu.cc  annotator_cpu.cpp  annotator_cpu.h  annotator_cpu.hh  annotator_cpu.hpp  meson.build
blocklib/blocks/copy/: _copy.hh  _copy.hpp  copy.cpp  copy.hpp  copy.yml  copy_cpu.cc  copy_cpu.cpp  copy_cpu.h  copy_cpu.hh  copy_cpu.hpp  copy_cpu.hpp.j2  copy_cuda.cc  copy_cuda.cpp  copy_cuda.cu  copy_cuda.h  copy_cuda.hh  copy_cuda.hpp  copy_impl.hpp  copy_impl.hpp.j2  copy_pybind.cc  meson.build
blocklib/blocks/delay/: delay.yml  delay_cpu.cc  delay_cpu.h  delay_cpu.hh  meson.build
blocklib/blocks/head/: _head.hh  head.cpp  head.hh  head.hpp  head.yml  head_cpu.cc  head_cpu.cpp  head_cpu.h  head_cpu.hh  head_cpu.hpp  meson.build
blocklib/blocks/lib/: CMakeLists.txt  annotator.cc  annotator.cpp  copy.cc  copy.cpp  dummy.cpp  fanout.cc  fanout.cpp  head.cc  head.cpp  meson.build  multiply_const.cc  multiply_const.cpp  multiply_const_blk.cpp  throttle.cpp  vector_sink.cc  vector_sink.cpp  vector_source.cc  vector_source.cpp
blocklib/blocks/load/: load.yml  load_cpu.cc  load_cpu.h  load_cpu.hh  load_cuda.cc  load_cuda.cu  load_cuda.cuh  load_cuda.h  load_cuda.hh  meson.build
blocklib/blocks/message_debug/: message_debug.yml  message_debug_cpu.cc  message_debug_cpu.h
blocklib/blocks/msg_forward/: _msg_forward.hh  meson.build  msg_forward.yml  msg_forward_cpu.cc  msg_forward_cpu.h  msg_forward_cpu.hh
blocklib/blocks/multiply_const/: _multiply_const.hh  _multiply_const.hpp  blockname_templated_domain.hpp.j2  meson.build  multiply_const.cu  multiply_const.hpp  multiply_const.yml  multiply_const_cpu.cpp  multiply_const_cpu.hh  multiply_const_cpu.hpp  multiply_const_cuda.cc  multiply_const_cuda.cpp  multiply_const_cuda.cu  multiply_const_cuda.hh  multiply_const_cuda.hpp
blocklib/blocks/nop/: _nop.hh  meson.build  nop.yml  nop_cpu.cc  nop_cpu.h  nop_cpu.hh
blocklib/common/: CMakeLists.txt
blocklib/cuda/: CMakeLists.txt  meson.build
blocklib/digital/: meson.build
blocklib/dtv/: meson.build
blocklib/fec/: meson.build
blocklib/fft/: meson.build
blocklib/fileio/: meson.build
blocklib/filter/: meson.build
blocklib/math/: meson.build
blocklib/newblock/: newblock_cpu.cc  newblock_cpu_t.cc  newblock_cpu_t.hh  newblock_cuda.cc  newblock_cuda.cu  newblock_cuda_t.cc
blocklib/newmod/: meson.build
blocklib/qtgui/: meson.build
blocklib/soapy/: meson.build
blocklib/streamops/: CMakeLists.txt  meson.build
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in  meson.build
docs/sphinx/: .gitignore  README.rst  conf.py  index.rst
gr/: README.md  (+2 more)
grc/: compiler.py  main.py  meson.build
grc/blocks/: options.block.yml  variable_struct.block.yml.py
grc/core/: Connection.py  Constants.py  FlowGraph.py  platform.py
grc/gui/: Application.py  MainWindow.py
grc/scripts/: gnuradio-companion  grcc
kernel/lib/: meson.build
lib/: CMakeLists.txt  multiply_const_blk.cc  vector_sink.cc  vector_source.cc
pmt/bench/: bm_pmt_dict_pack_unpack.cc  bm_pmt_dict_pack_unpack.cpp  bm_pmt_dict_ref.cc  bm_pmt_dict_ref.cpp  bm_pmt_serialize_uvec.cc  bm_pmt_serialize_uvec.cpp  meson.build
pmt/lib/: CMakeLists.txt  meson.build  pmt.cc  pmt.cpp  pmtf.cc  pmtf.cpp  pmtf_map.cc  pmtf_map.cpp  pmtf_map2.cpp  pmtf_old.cpp  pmtf_scalar.cc  pmtf_scalar.cpp  pmtf_string.cc  pmtf_string.cpp  pmtf_vector.cc  pmtf_vector.cpp  pmtf_wrap.cc  pmtf_wrap.cpp
pmt/schema/: meson.build
pmt/test/: CMakeLists.txt  meson.build  qa_pmt.cc  qa_pmt.cpp  qa_pmt_vector.cpp  test_pmt.cpp  test_pmtf.cc  test_pmtf.cpp
runtime/lib/: CMakeLists.txt  block.cc  block.cpp  buffer.cc  buffer.cpp  buffer_cpu_simple.cc  buffer_cpu_vmcirc.cc  buffer_cpu_vmcirc_mmap_shm.cc  buffer_cpu_vmcirc_mmap_shm.hh  buffer_cpu_vmcirc_mmap_shm_open.cc  buffer_cpu_vmcirc_sysv_shm.cc  buffer_cuda.cu  buffer_cuda_pinned.cu  buffer_cuda_sm.cc  buffer_cuda_sm.cu  buffer_management.cc  buffer_management.cpp  buffer_net_zmq.cc  buffer_sm.cc  buffer_sm.cpp  constants.cc.in  cudabuffer.cu  cudabuffer_pinned.cu  cudabuffer_sm.cu  domain_adapter.cpp  domain_adapter_zmq.cpp  edge.cc  edge.cpp  fgm_proxy.cc  flat_graph.cc  flat_graph.cpp  flowgraph.cc  flowgraph.cpp  flowgraph_monitor.cc  flowgraph_monitor.cpp  graph.cc  graph.cpp  graph_utils.cc  graph_utils.cpp  logging.cc  (+32 more)
test/: CMakeLists.txt  meson.build  qa_basic.py  qa_block_grouping.cc  qa_default_runtime.cc  qa_fast_atan2f.cc  qa_fxpt.cc  qa_fxpt_nco.cc  qa_fxpt_vco.cc  qa_hier_block.cc  qa_hier_block.py  qa_math.cc  qa_message_ports.cc  qa_optional_ports.py  qa_parameters.py  qa_python_block.py  qa_random.py  qa_scheduler_nbt.cc  qa_sincos.cc  qa_single_mapped_buffers.cc  qa_tags.cc  qa_zmq_buffers.cc  vco.h
test/cuda/: meson.build  qa_python_block_cuda.py  qa_scheduler_nbt_cuda_copy.cc
(+1465 files in other folders)
