subdir('include/gnuradio/digital')

digital_sources = []
digital_cu_sources = []
digital_pybind_sources = []
digital_pybind_names = []
digital_deps = []

# Individual block subdirectories


subdir('lib')
# if (get_option('enable_python'))
#     subdir('python/digital')
# endif

# if (get_option('enable_testing'))
#     subdir('test')
# endif