subdir('include/gnuradio/dtv')

dtv_sources = []
dtv_cu_sources = []
dtv_pybind_sources = []
dtv_pybind_names = []
dtv_deps = []
# Individual block subdirectories
subdir('atsc_fpll')
subdir('atsc_sync')
subdir('atsc_fs_checker')
subdir('atsc_equalizer')
subdir('atsc_viterbi_decoder')
subdir('atsc_deinterleaver')
subdir('atsc_derandomizer')

subdir('lib')
# if (get_option('enable_python'))
#     subdir('python/dtv')
# endif

subdir('test')
